--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,9 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 
+
+{% block title %} {{title}} {% endblock %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock %}
