--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -16,7 +16,8 @@
     {% block extra_css %}{% endblock %}
 </head>
 
-<body{% block body_class %}{% endblock %}>
+<body
+    {% block body_class %}{% endblock %}>
     {% block header %}
     <header>
         <nav class="container">
