--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -44,7 +44,11 @@
                             </svg>
                         </div>
                         <div class="dropdown-menu" id="profileDropdown">
-                            <a href="profile.html">
+                            {% if request.user.is_authenticated %}
+                                <a href="{% url 'core:profile' %}">
+                            {% else %}
+                                <a href="{% url 'accounts:sign-in' %}">
+                            {% endif %}
                                 <svg viewBox="0 0 24 24">
                                     <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
                                 </svg>
@@ -87,12 +91,24 @@
                     </div>
 
                     <ul class="mobile-nav-links">
-                        <li><a href="#home" onclick="toggleMobileMenu()">
+                        <li><a href="{% url 'core:index' %}" onclick="toggleMobileMenu()">
                             <svg viewBox="0 0 24 24">
                                 <path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z"/>
                             </svg>
                             Home
                         </a></li>
+                        <li>
+                            {% if request.user.is_authenticated %}
+                                <a href="{% url 'core:profile' %}" onclick="toggleMobileMenu()">
+                            {% else %}
+                                <a href="{% url 'accounts:sign-in' %}" onclick="toggleMobileMenu()">
+                            {% endif %}
+                            <svg viewBox="0 0 24 24">
+                              <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" />
+                            </svg>
+                            Profile
+                          </a>
+                        </li>
                         <li><a href="#features" onclick="toggleMobileMenu()">
                             <svg viewBox="0 0 24 24">
                                 <path d="M12,2A2,2 0 0,1 14,4C14,4.74 13.6,5.39 13,5.73V7H14A7,7 0 0,1 21,14H22A1,1 0 0,1 23,15V18A1,1 0 0,1 22,19H21V20A2,2 0 0,1 19,22H5A2,2 0 0,1 3,20V19H2A1,1 0 0,1 1,18V15A1,1 0 0,1 2,14H3A7,7 0 0,1 10,7H11V5.73C10.4,5.39 10,4.74 10,4A2,2 0 0,1 12,2M7.5,13A2.5,2.5 0 0,0 5,15.5A2.5,2.5 0 0,0 7.5,18A2.5,2.5 0 0,0 10,15.5A2.5,2.5 0 0,0 7.5,13M16.5,13A2.5,2.5 0 0,0 14,15.5A2.5,2.5 0 0,0 16.5,18A2.5,2.5 0 0,0 19,15.5A2.5,2.5 0 0,0 16.5,13Z"/>
